4.5 -> 5.0:
    - rpm.org: cleanup main() definitions in tests and tools
    - rse: include <netinet/in.h> and/or <arpa/inet.h> for htonl(3)
    - jbj: uncouple signature verification from transaction sets.
    - jbj: add (*findPubkey) (_ts, _dig) callback in pgpDig.
    - jbj: fix: headerUnload() size implies HEADER_MAGIC_NO, no hackery needed.
    - jbj: sum per-dig digest/signature stats into ts stats in rpmtsCleanDig.
    - jbj: initialize pgpVSFlags with pgpNewDig(vsflags).
    - jbj: add pgpVSFlags for pgpDig control disablers. ugh.
    - jbj: re-add rpmtsCleanDig() to preserve opaque rpmts.
    - jbj: add pgpStatsAccumulator, not fully wired yet.
    - jbj: refactor signature components from ts into dig container.
    - jbj: add size_t *lenp to headerUnload().
    - jbj: consistent naming in rpmdb/pkgio.c
    - jbj: eliminate rpmNewSignature() and rpmFreeSignature().
    - jbj: bury rpmReadSignature/rpmWriteSignature.
    - jbj: rip rpmtsCleanDig() inlining the code.
    - jbj: refactor headerVerifyInfo().
    - jbj: pour the amber over the corpse of the rpmlead. Ptooey! R.I.P.
    - jbj: stub in rpmpkgFoo() i/o methods.
    - jbj: refactor rpmlead I/O routines into rpmdb/pkgio.c.
    - jbj: protect rpmdb contents from cluelesser morons.
    - jbj: add sourcepkgid index and permit queries of the (non-existent) tag.
    - rpm.org: permit mire RE's against binary data. Useless ... (#277161).
    - rpm.org: mire RE against missing data now mis-matches rather than matches.
    - jbj: remove ancient %verifyscript tag != 1079 retrofit.
    - rpm.org: fix whitespace-in-files issues in find-debuginfo.sh.
    - rpm.org: new debuginfo script.
    - jbj: update known arch's.
    - jbj: use rpmGetPath() to simplify generating filenames, nuke alloca.
    - jbj: pubkey headers were misidentified as source, not binary, headers.
    - rpm.org: report open error on signing explicitly (#155079).
    - rpm.org: fix for debugedit -l.